--- a/knowleDGAble.ipynb
+++ b/knowleDGAble.ipynb
@@ -65,33 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(756457, 2)\n",
       "rank       int64\n",
       "domain    object\n",
       "dtype: object\n"
      ]
-    }
-   ],
-   "source": [
-    "# load Alexa top 1M domain names\n",
-    "top_df = pd.read_csv('data/top-1m.csv.zip', header=None)\n",
-    "top_df.columns = ['rank', 'domain']\n",
-    "print(top_df.shape)\n",
-    "print(top_df.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -143,61 +128,11 @@
        "      <td>5</td>\n",
        "      <td>qq.com</td>\n",
        "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   rank       domain\n",
-       "0     1   google.com\n",
-       "1     2  youtube.com\n",
-       "2     3    tmall.com\n",
-       "3     4    baidu.com\n",
-       "4     5       qq.com"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rank</th>\n",
-       "      <th>domain</th>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
        "    <tr>\n",
        "      <th>756452</th>\n",
        "      <td>756453</td>\n",
@@ -225,24 +160,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>756457 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          rank                   domain\n",
+       "0            1               google.com\n",
+       "1            2              youtube.com\n",
+       "2            3                tmall.com\n",
+       "3            4                baidu.com\n",
+       "4            5                   qq.com\n",
+       "...        ...                      ...\n",
        "756452  756453   toptutorialsonline.net\n",
        "756453  756454  trainyourtechskills.com\n",
        "756454  756455            uknews247.com\n",
        "756455  756456             webzbugz.com\n",
-       "756456  756457       wonderfirstore.com"
+       "756456  756457       wonderfirstore.com\n",
+       "\n",
+       "[756457 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_df.tail(5)"
+    "# load Alexa top 1M domain names\n",
+    "top_df = pd.read_csv('data/top-1m.csv.zip', header=None)\n",
+    "top_df.columns = ['rank', 'domain']\n",
+    "print(top_df.dtypes)\n",
+    "top_df"
    ]
   },
   {
@@ -258,14 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1316736, 4)\n",
       "family    object\n",
       "domain    object\n",
       "date1     object\n",
@@ -336,20 +283,71 @@
        "      <td>2020-09-16 00:00:00</td>\n",
        "      <td>2020-09-16 23:59:59</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316731</th>\n",
+       "      <td>simda</td>\n",
+       "      <td>qexukog.in</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>2030-01-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316732</th>\n",
+       "      <td>simda</td>\n",
+       "      <td>zugulid.in</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>2030-01-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316733</th>\n",
+       "      <td>simda</td>\n",
+       "      <td>diruxus.in</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>2030-01-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316734</th>\n",
+       "      <td>simda</td>\n",
+       "      <td>navyvyt.in</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>2030-01-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316735</th>\n",
+       "      <td>simda</td>\n",
+       "      <td>kejybar.in</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>2030-01-01 00:00:00</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1316736 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   family          domain                date1                date2\n",
-       "0  nymaim  xfudzjtxf.info  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
-       "1  nymaim    wtzwhmej.com  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
-       "2  nymaim      dbmvia.com  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
-       "3  nymaim    gkegmfot.biz  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
-       "4  nymaim    jevylwpv.biz  2020-09-16 00:00:00  2020-09-16 23:59:59"
+       "         family          domain                date1                date2\n",
+       "0        nymaim  xfudzjtxf.info  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
+       "1        nymaim    wtzwhmej.com  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
+       "2        nymaim      dbmvia.com  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
+       "3        nymaim    gkegmfot.biz  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
+       "4        nymaim    jevylwpv.biz  2020-09-16 00:00:00  2020-09-16 23:59:59\n",
+       "...         ...             ...                  ...                  ...\n",
+       "1316731   simda      qexukog.in  1970-01-01 00:00:00  2030-01-01 00:00:00\n",
+       "1316732   simda      zugulid.in  1970-01-01 00:00:00  2030-01-01 00:00:00\n",
+       "1316733   simda      diruxus.in  1970-01-01 00:00:00  2030-01-01 00:00:00\n",
+       "1316734   simda      navyvyt.in  1970-01-01 00:00:00  2030-01-01 00:00:00\n",
+       "1316735   simda      kejybar.in  1970-01-01 00:00:00  2030-01-01 00:00:00\n",
+       "\n",
+       "[1316736 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,9 +355,8 @@
    "source": [
     "dga_df = pd.read_csv('./data/netlab360_dga.zip', sep='\\t', skiprows=19, header=None)\n",
     "dga_df.columns = ['family', 'domain', 'date1', 'date2']\n",
-    "print(dga_df.shape)\n",
     "print(dga_df.dtypes)\n",
-    "dga_df.head(5)"
+    "dga_df"
    ]
   },
   {
