working on approach section

--- a/knowleDGAble.ipynb
+++ b/knowleDGAble.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Problem-Statement\" data-toc-modified-id=\"Problem-Statement-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Problem Statement</a></span></li><li><span><a href=\"#Data\" data-toc-modified-id=\"Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Legitimate:-Alexa-Top-1M-Data\" data-toc-modified-id=\"Legitimate:-Alexa-Top-1M-Data-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Legitimate: Alexa Top 1M Data</a></span></li><li><span><a href=\"#Malicious:-DGA-Data\" data-toc-modified-id=\"Malicious:-DGA-Data-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Malicious: DGA Data</a></span></li><li><span><a href=\"#Create-labeled-dataset\" data-toc-modified-id=\"Create-labeled-dataset-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Create labeled dataset</a></span></li><li><span><a href=\"#Extract-Features\" data-toc-modified-id=\"Extract-Features-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Extract Features</a></span></li></ul></li><li><span><a href=\"#Approach\" data-toc-modified-id=\"Approach-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Approach</a></span><ul class=\"toc-item\"><li><span><a href=\"#Considerations\" data-toc-modified-id=\"Considerations-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Considerations</a></span></li></ul></li><li><span><a href=\"#References-and-Further-Reading\" data-toc-modified-id=\"References-and-Further-Reading-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>References and Further Reading</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Problem-Statement\" data-toc-modified-id=\"Problem-Statement-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Problem Statement</a></span></li><li><span><a href=\"#Data\" data-toc-modified-id=\"Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Legitimate:-Alexa-Top-1M-Data\" data-toc-modified-id=\"Legitimate:-Alexa-Top-1M-Data-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Legitimate: Alexa Top 1M Data</a></span></li><li><span><a href=\"#Malicious:-DGA-Data\" data-toc-modified-id=\"Malicious:-DGA-Data-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Malicious: DGA Data</a></span></li><li><span><a href=\"#Create-labeled-dataset\" data-toc-modified-id=\"Create-labeled-dataset-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Create labeled dataset</a></span></li></ul></li><li><span><a href=\"#Approach\" data-toc-modified-id=\"Approach-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Approach</a></span><ul class=\"toc-item\"><li><span><a href=\"#Considerations\" data-toc-modified-id=\"Considerations-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Considerations</a></span></li><li><span><a href=\"#Alternatives\" data-toc-modified-id=\"Alternatives-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Alternatives</a></span></li><li><span><a href=\"#Approach-1:-Using-Features\" data-toc-modified-id=\"Approach-1:-Using-Features-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Approach 1: Using Features</a></span><ul class=\"toc-item\"><li><span><a href=\"#creating-n-grams\" data-toc-modified-id=\"creating-n-grams-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>creating n-grams</a></span></li></ul></li></ul></li><li><span><a href=\"#References-and-Further-Reading\" data-toc-modified-id=\"References-and-Further-Reading-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>References and Further Reading</a></span></li></ul></div>"
    ]
   },
   {
@@ -399,21 +399,8 @@
     "  - Add alexa + dga.\n",
     "  - Note that the netlab360_dga is class-imbalanced, so that should be accounted for, when creating the training dataset.\n",
     "    - Mix with other DGA datasets?\n",
-    "    - Pick with 100,000 from the top 4 families (banjori, emotet, rovnix, tinba)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extract Features\n",
-    "  - remove TLD (what is special about .ddns.net ?)\n",
-    "  - Which features to extract: i.e. what makes the difference between legit vs malicious?\n",
-    "    - length\n",
-    "    - letter counts: numbers, vowels, etc. (ratio to the total length)\n",
-    "    - n-grams: (n = 3, 4, ...)\n",
-    "    - number of matches with dictionary (what language? length of words?)\n",
-    "  "
+    "    - Pick with 100,000 from the top 4 families (banjori, emotet, rovnix, tinba)\n",
+    "    "
    ]
   },
   {
@@ -424,7 +411,48 @@
     "## Considerations\n",
     "- The method should have low false positive rate: it is important not to detect legitimate domains as DGA\n",
     "- We should extract enough features, but not too many: too many features can result in over-fitting.\n",
-    "- Ensemble of several methods"
+    "- Ensemble of several methods\n",
+    "\n",
+    "## Alternatives\n",
+    "1. Features: Use word statistics from n-grams and dictionary:\n",
+    "  - Model selection: use a classifier (logistic regression,  CART (classification & regression tree), random forest, etc.)\n",
+    "1. Feature less: Using a Hidden Markov Model (HMM) or recurrent neural network (LSTM)\n",
+    "  - train on character level (feature-less): example papers in references.\n",
+    "1. Hybrid\n",
+    "  - LSTM/HMM, trained on n-grams?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approach 1: Using Features\n",
+    "  - remove TLD (what is special about .ddns.net ?)\n",
+    "  - Which features to extract: i.e. what makes the difference between legit vs malicious?\n",
+    "    - length\n",
+    "    - letter counts: numbers, vowels, etc. (ratio to the total length)\n",
+    "    - n-grams: (n = 1, 2, 3, 4, ...)\n",
+    "      - pick the top ones (remove outliers?)\n",
+    "    - number of matches with dictionary (what language? length of words?)\n",
+    "\n",
+    "### creating n-grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('y', 'o', 'u'), ('o', 'u', 't'), ('u', 't', 'u'), ('t', 'u', 'b'), ('u', 'b', 'e')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(ngrams('youtube', 3)))"
    ]
   },
   {
@@ -434,6 +462,7 @@
     "# References and Further Reading\n",
     " - Domain Generation Algorithms (DGAs) of Malware reimplemented in Python. ([github](https://github.com/baderj/domain_generation_algorithms))\n",
     " - Predicting Domain Generation Algorithms with Long Short-Term Memory Networks: ([PDF](https://arxiv.org/abs/1611.00791))\n",
+    " - From Throw-Away Traffic to Bots: Detecting the Rise of DGA-Based Malware ([PDF](https://www.usenix.org/system/files/conference/usenixsecurity12/sec12-final127.pdf))\n",
     " - netlab 360 DGA Families ([+data](https://data.netlab.360.com/dga/))\n"
    ]
   },
